mutations with server actions, modern react hooks

--- a/the-wild-oasis-website/app/_styles/globals.css
+++ b/the-wild-oasis-website/app/_styles/globals.css
@@ -32,9 +32,18 @@
 
 /* For data picker */
 
-.rdp {
-  --rdp-cell-size: 32px !important;
+.rdp-root {
+  /* --rdp-cell-size: 32px !important; */
   --rdp-accent-color: theme('colors.accent.500') !important;
-  --rdp-background-color: theme('colors.accent.600') !important;
+  --rdp-accent-background-color: theme('colors.accent.600') !important;
   margin: 0 !important;
+}
+
+.rdp-root .rdp-months {
+  flex-wrap: nowrap;
+}
+
+.rdp-root .rdp-day:not(.rdp-selected, .rdp-disabled):hover {
+  background-color: theme('colors.accent.400') !important;
+  border-radius: 100%;
 }
